spacing difference on blog images & z index fix for navbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -96,7 +96,7 @@ a {
   padding-bottom: 14px;
   background-color: white;
   opacity: 90%;
-
+  z-index: 200000;
   overflow: none;
   padding-right: 1rem;
   position: fixed;
@@ -150,7 +150,7 @@ p {
   border: 1px solid black;
   z-index: -200;
   position: relative;
-  margin: -14px 0 0 -17px;
+  margin: -50px 0 0 -17px;
 }
 
 .posts {
@@ -169,7 +169,7 @@ p {
 
 .postTitle {
   position: relative;
-  z-index: 1000;
+  z-index: 100;
   margin-bottom: -30px;
   font-weight: 650;
   font-size: 100%;
@@ -217,6 +217,7 @@ p {
 }
 
 .underHeader {
+  z-index: 200000;
   left: 30px;
   top: 125px;
   right: 30px;
